ATIME-1381: ABAC checks for modified entities is done in batches: